[gd_scene load_steps=5 format=3 uid="uid://deddpkxvmxc4p"]

[ext_resource type="PackedScene" uid="uid://roqyu17v88ef" path="res://scenes/pipe/pipe.tscn" id="1_ovodm"]
[ext_resource type="Script" path="res://scripts/pipes.gd" id="1_qi0yl"]
[ext_resource type="PackedScene" uid="uid://dvwe1802cv305" path="res://scenes/laser/laser.tscn" id="2_7v7xr"]
[ext_resource type="AudioStream" uid="uid://2shlmvngsukw" path="res://assets/audio/score.wav" id="4_38ekr"]

[node name="pipes" type="Node2D"]
script = ExtResource("1_qi0yl")

[node name="Pipe_upper" parent="." instance=ExtResource("1_ovodm")]
position = Vector2(33, -80)
rotation = 3.14159

[node name="Pipe_lower" parent="." groups=["Plane"] instance=ExtResource("1_ovodm")]
position = Vector2(-35, 80)

[node name="laser" parent="." groups=["Plane"] instance=ExtResource("2_7v7xr")]
z_index = -1
position = Vector2(-9, -87)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(29, 0)

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_38ekr")

[connection signal="body_entered" from="Pipe_upper" to="." method="_on_pipe_entered"]
[connection signal="body_entered" from="Pipe_lower" to="." method="_on_pipe_entered"]
[connection signal="body_entered" from="laser" to="." method="_on_laser_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
